--- a/Strona Agro/kontakt.html
+++ b/Strona Agro/kontakt.html
@@ -49,9 +49,9 @@
                                             <form style="width: 100%; height: 90%; position: relative;"action="mailto:sklep.agrolipiny@gmail.com" method="post" enctype="text/plain"><div>
                                                 <p style="position: relative; left:-20%; font-size: 25px; padding-top: 5px;">Masz pytanie ? Napisz do Nas!</p>
                                                 <label>Twój mail:</label> <br><br>
-                                                <input style="width:30%"name="mail" placeholder="Tu wpisz swój adres e-mail"></input> <br><br>
+                                                <input style="width:100%"name="mail" placeholder="Tu wpisz swój adres e-mail"></input> <br><br>
                                                 <label>Temat:</label> <br><br>
-                                                <input style="width:30%"name="temat" placeholder="Tu wpisz temat wiadomości"></input> <br><br>
+                                                <input style="width:100%"name="temat" placeholder="Tu wpisz temat wiadomości"></input> <br><br>
                                                 <label>Treść:</label> <br><br>
                                                 <textarea name="tresc" cols="50" rows="10" placeholder="Tu wpisz treść wiadomości"></textarea>
                                                 <br><br><br>
@@ -66,28 +66,29 @@
                                         <div id="kontaktBox2" style="background-color: darkgray;">
 
                                             <h1>DANE KONTAKTOWE</h1>
-                                            <div style="position:relative; left:0">Adres: <br>
+                                            <div style="position:relative; left:0; font-size: 20px;"><b>Adres:</b> <br>
                                                 Lipiny 71<br>
                                                 92-701 Łódź<br><br>
-                                                Godziny otwarcia:<br>
+                                                <b>Godziny otwarcia:</b><br>
                                                 poniedziałek - piątek: 8:00 - 16:00<br><br>
-                                                E-mail:<br>
+                                                <b>E-mail:</b><br>
                                                 sklep.agrolipiny@gmail.com
                                             </div>
 
                                             
 
-                                            <div style="position:relative; left:0">
-                                                Telefon: <br><br>
+                                            <div style="position:relative; left:0; font-size: 20px">
+                                                <br>
+                                                <b>Telefon:</b> <br>
                                                 693 700 708 ;  695 641 406<br><br>
-                                                Maszyny: 605 685 614 ;  603 836 785<br><br>
-                                                Części zamienne i serwis: 42 205 02 43<br><br>
+                                                <b>Maszyny:</b> 605 685 614 ;  603 836 785<br>
+                                                <b>Części zamienne i serwis:</b> 42 205 02 43<br><br>
                                             </div>
 
                                         </div>
 
                             </div> <!--koniec div kontaktBox-->
-                            <br><br>
+                            <br><br><br><br>
                             <div id="nav">
                                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2466.993123105271!2d19.658840716136677!3d51.
                                 80628627968538!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471bcde89fa341b5%3A0x607099f885aa302c!2sAgro
