--- a/Strona Agro/o_nas.html
+++ b/Strona Agro/o_nas.html
@@ -44,8 +44,8 @@
                 </header>
                 <div id="zawartosc" align="center">
                          
-                            
-                            <img style="border: 2px solid black" src="obrazy/Agro_zdjecie.webp">
+                            <br><br><br>
+                            <img style="border: 2px solid black" src="obrazy/Agro_zdjecie.webp" width="1280px">
                             <br><br><br><br><br><br>
                             <div id="informacje">
 
@@ -69,7 +69,7 @@
             <b><p style="position: absolute; top:-10px; right:500px; font-size: 25px;">LIPINY 71</p></b>
             <b><p style="position: absolute; top:25px; right:470px; font-size: 25px">92-701 ŁÓDŹ</p></b>
 
-            <button style="position: absolute; right:100px"class="button" type="button"><a href="kontakt.html"> Kontakt </a></button> 
+            <button style="position: absolute; right:100px;"class="button" type="button"><a href="kontakt.html"> Kontakt </a></button> 
 
         </div><!--koniec div footer-->
 
